$Id: History,v 1.11 1999-09-02 14:42:49 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
02 Sep. 1999 Hajime Yoshida
  to geant4-00-01-ref-01 (Revision 1.9)
  a new tag is interfaces-01-00-04
  after which a tag interfaces-V00-01-00 was added identical to
    interfaces-01-00-04 except for this History file.

- G4UIterminal.cc and G4UIGAG.cc now shows prompt characters
	to an input of return (or null command line).

head 31 Mai 1999  Guy Barrand
- G4VInteractorManager::SecondaryLoop : add a message to indicate
  that we enter a "viewer" secondary X event loop and that someone
  add to "Escape" it from the viewer to continue.

interfaces-01-00-03  19th April 1999  John Allison
- Protected G4VBasicShell.cc with if( tempPath.length()>0 ).

interfaces-01-00-02  18th April 1999  John Allison
- Tagged.

head 11th Mai 1999  Guy Barrand
1) G4UIXm : Linux, correct geometry management of the menubar.

head 06th Mai 1999  Guy Barrand
1) G4Win32, G4UIWin32 : modifications to compile with Visual-6.0.

head 16th April 1999  Guy Barrand
1) G4VBasicShell, G4UIXm, G4UIWin32 : command completion.
2) G4InteractorMessenger, G4VInteractorManager : code polishement.
