@@ -1,4 +1,4 @@
-$Id: History,v 1.11 1999-09-02 14:42:49 johna Exp $
+$Id: History,v 1.12 1999-10-12 12:05:51 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+12 Oct. 1999 John Allison for Hajime Yoshida (tag interfaces-V00-01-00a)
+- Protection for zero length strings for Sun in G4UIterminal and G4UIGAG.
+
 02 Sep. 1999 Hajime Yoshida
   to geant4-00-01-ref-01 (Revision 1.9)
   a new tag is interfaces-01-00-04
